--- a/js/sample-app/src/App.css
+++ b/js/sample-app/src/App.css
@@ -81,6 +81,7 @@ body {
 .App-video-container .video-container {
     width: 100%;
     height: 100%;
+    display: flex;
 }
 
 .App-video-container .video-container.small {
@@ -96,4 +97,23 @@ body {
 .App-video-container .video-container.hidden {
   display: none;
 }
+
+.App-video-container .video-container.active-2 .OT_subscriber {
+  width: 50%;
+}
+
+.App-video-container .video-container.active-3 .OT_subscriber {
+  width: calc(100%/3) !important;
+}
+
+.App-video-container .video-container.active-4 {
+    flex-wrap: wrap;
+}
+
+.App-video-container .video-container.active-4 .OT_subscriber {
+    width: 50% !important;
+    height: 50% !important;
+}
+
+
 
