--- a/js/sample-app/src/App.css
+++ b/js/sample-app/src/App.css
@@ -36,11 +36,39 @@ body {
 }
 
 .App-main {
+    position: relative;
     width: 75vw;
     height: calc(75vw * .6);
     margin: 10px auto;
     border: 1px solid lightblue;
 }
+
+.App-control-container {
+    position: absolute;
+    height: 100%;
+    width: 60px;
+    left: -60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.App-control-container.hidden {
+    display: none;
+}
+
+.App-control-container .ots-video-control {
+    width: 50px;
+    height: 50px;
+    margin: 20px 0 !important;
+    border: 2px solid white;
+    border-radius: 50%;
+    background-position: center;
+    background-color: rgba(27, 134, 144, 0.4);
+    background-color: lightgrey;
+    cursor: pointer;
+ }
 
 .App-video-container {
   position: relative;
