--- a/js/sample-app/src/App.css
+++ b/js/sample-app/src/App.css
@@ -67,13 +67,30 @@ body {
     background-position: center;
     background-color: rgba(27, 134, 144, 0.4);
     background-color: lightgrey;
+    background-repeat: no-repeat;
     cursor: pointer;
- }
+}
+
+.App-control-container .ots-video-control.audio {
+    background-image: url(https://assets.tokbox.com/solutions/images/icon-mic.png);
+}
+
+.App-control-container .ots-video-control.audio:hover, .App-control-container .ots-video-control.audio.muted {
+    background-image: url(https://assets.tokbox.com/solutions/images/icon-muted-mic.png);
+}
+
+.App-control-container .ots-video-control.video {
+    background-image: url(https://assets.tokbox.com/solutions/images/icon-video.png);
+}
+
+.App-control-container .ots-video-control.video.muted {
+    background-image: url(https://assets.tokbox.com/solutions/images/icon-no-video.png);
+}
 
 .App-video-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .App-mask {
@@ -101,9 +118,9 @@ body {
 }
 
 .App-mask .message.button {
-  border: 1px solid white;
-  padding:20px 40px;
-  border-radius: 6px;
+    border: 1px solid white;
+    padding: 20px 40px;
+    border-radius: 6px;
 }
 
 .App-video-container .video-container {
@@ -128,15 +145,15 @@ body {
 }
 
 .App-video-container .video-container.hidden {
-  display: none;
+    display: none;
 }
 
 .App-video-container .video-container.active-2 .OT_subscriber {
-  width: 50%;
+    width: 50%;
 }
 
 .App-video-container .video-container.active-3 .OT_subscriber {
-  width: calc(100%/3) !important;
+    width: calc(100%/3) !important;
 }
 
 .App-video-container .video-container.active-4 {
@@ -147,6 +164,3 @@ body {
     width: 50% !important;
     height: 50% !important;
 }
-
-
-
