--- a/js/vanilla-js-sample-app/public/css/style.css
+++ b/js/vanilla-js-sample-app/public/css/style.css
@@ -96,6 +96,9 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .App-mask {
